Add docs on delegated flow

--- a/docs/lab/overview/sandbox.mdx
+++ b/docs/lab/overview/sandbox.mdx
@@ -31,4 +31,4 @@ The generated results will cycle through all possible [result types](/lab/result
 Note that generated values might not match the expected unit.
 </Warning>
 
-As for the PDF results, there are not generated, and Vital returns an example PDF that does not reflect the ordered test.
+As for the PDF results, these are not generated, and Vital returns an example PDF that does not reflect the ordered test.
