--- a/docs/api-reference/lab-testing/create-unregistered-order.mdx
+++ b/docs/api-reference/lab-testing/create-unregistered-order.mdx
@@ -26,7 +26,7 @@ data = client.LabTests.create_unregistered_testkit_order(
 )
 ```
 
-```bash Shell
+```bash cURL
 curl --request POST \
      --url https://api.tryvital.io/v3/order/testkit/ \
      --header 'Accept: application/json'
