--- a/docs/api-reference/lab-testing/register-order.mdx
+++ b/docs/api-reference/lab-testing/register-order.mdx
@@ -43,7 +43,7 @@ data = client.LabTests.register_testkit_order(
 )
 ```
 
-```bash Shell
+```bash cURL
 curl --request POST \
      --url https://api.tryvital.io/v3/order/testkit/register \
      --header 'Accept: application/json'
