--- a/docs/api-reference/link/create-code.mdx
+++ b/docs/api-reference/link/create-code.mdx
@@ -7,7 +7,7 @@ Used for Vital iOS Apps to share Apple HealthKit with you. Please refer [here](/
 
 <RequestExample>
 
-```bash Bash
+```bash cURL
 curl --request POST \
      --url {{BASE_URL}}/v2/link/code/create\?user_id\=1875c190-0cd6-46c1-8670-5b56a7794b78 \
      --header 'Accept: application/json' \
