--- a/docs/api-reference/link/generate-link-token.mdx
+++ b/docs/api-reference/link/generate-link-token.mdx
@@ -5,7 +5,7 @@ openapi: "POST /v2/link/token"
 
 <RequestExample>
 
-```bash Bash
+```bash cURL
 curl --request POST \
      --url {{BASE_URL}}/v2/link/token \
      --header 'Accept: application/json' \
