--- a/docs/api-reference/link/link-demo-provider.mdx
+++ b/docs/api-reference/link/link-demo-provider.mdx
@@ -5,7 +5,7 @@ openapi: "POST /v2/link/connect/demo"
 
 <RequestExample>
 
-```bash Bash
+```bash cURL
 curl --request POST \
      --url {{BASE_URL}}/v2/link/connect/demo \
      --header 'Accept: application/json' \
