--- a/docs/api-reference/link/link-email-provider.mdx
+++ b/docs/api-reference/link/link-email-provider.mdx
@@ -5,7 +5,7 @@ openapi: "POST /v2/link/provider/email/{provider}"
 
 <RequestExample>
 
-```bash Bash
+```bash cURL
 curl --request POST \
      --url {{BASE_URL}}/v2/link/provider/email/{provider} \
      --header 'Accept: application/json' \
