--- a/docs/api-reference/profile/get-raw.mdx
+++ b/docs/api-reference/profile/get-raw.mdx
@@ -7,7 +7,7 @@ openapi: "GET /v2/summary/profile/{user_id}/raw"
 
 <RequestExample>
 
-```bash Shell
+```bash cURL
 curl --request GET \
      --url {{BASE_URL}}/v2/summary/profile/{user_id}/raw \
      --header 'Accept: application/json' \
