--- a/docs/api-reference/providers.mdx
+++ b/docs/api-reference/providers.mdx
@@ -5,7 +5,7 @@ openapi: "GET /v2/providers"
 
 <RequestExample>
 
-```bash Shell
+```bash cURL
 curl --request GET \
      --url https://api.tryvital.io/v2/providers/ \
      --header 'Accept: application/json'
