--- a/docs/api-reference/user/create-sign-in-token.mdx
+++ b/docs/api-reference/user/create-sign-in-token.mdx
@@ -6,7 +6,7 @@ description: Create a [Vital Sign-In Token](/wearables/sdks/authentication#vital
 
 <RequestExample>
 
-```shell Shell
+```cURL
 curl --request POST \
      --url {{BASE_URL}}/v2/user/{{USER_ID}}/sign_in_token \
      --header 'Accept: application/json' \
