--- a/docs/api-reference/user/create-user.mdx
+++ b/docs/api-reference/user/create-user.mdx
@@ -4,7 +4,7 @@ openapi: "POST /v2/user"
 
 <RequestExample>
 
-```shell Shell
+```bash cURL
 curl --request POST \
      --url {{BASE_URL}}/v2/user/ \
      --header 'Accept: application/json' \
