--- a/docs/api-reference/user/delete-user.mdx
+++ b/docs/api-reference/user/delete-user.mdx
@@ -4,7 +4,7 @@ openapi: "DELETE /v2/user/{user_id}"
 
 <RequestExample>
 
-```bash Shell
+```bash cURL
 curl --request DELETE \
      --url {{BASE_URL}}/v2/user/{user_id} \
      --header 'x-vital-api-key: <API_KEY>' \
