--- a/docs/api-reference/user/deregister-a-provider.mdx
+++ b/docs/api-reference/user/deregister-a-provider.mdx
@@ -5,7 +5,7 @@ openapi: "DELETE /v2/user/{user_id}/{provider}"
 
 <RequestExample>
 
-```bash Shell
+```bash cURL
 curl --request DELETE \
      --url {{BASE_URL}}/v2/user/{user_id}/{provider} \
      --header 'Accept: application/json' \
