--- a/docs/api-reference/user/get-user.mdx
+++ b/docs/api-reference/user/get-user.mdx
@@ -5,7 +5,7 @@ openapi: "GET /v2/user/{user_id}"
 
 <RequestExample>
 
-```bash Shell
+```bash cURL
 curl --request GET \
      --url {{BASE_URL}}/v2/user/{user_id} \
      --header 'x-vital-api-key: <API_KEY>' \
