--- a/docs/api-reference/user/get-users-connected-providers.mdx
+++ b/docs/api-reference/user/get-users-connected-providers.mdx
@@ -4,7 +4,7 @@ openapi: "GET /v2/user/providers/{user_id}"
 
 <RequestExample>
 
-```bash Shell
+```bash cURL
 curl --request GET \
      --url {{BASE_URL}}/v2/user/providers/{user_id} \
      --header 'Accept: application/json' \
