--- a/docs/api-reference/user/get-users.mdx
+++ b/docs/api-reference/user/get-users.mdx
@@ -4,7 +4,7 @@ openapi: "GET /v2/user"
 
 <RequestExample>
 
-```bash Bash
+```bash cURL
 curl --request GET \
      --url {{BASE_URL}}/v2/user/ \
      --header 'Accept: application/json' \
