--- a/docs/api-reference/vitals/cholesterol.mdx
+++ b/docs/api-reference/vitals/cholesterol.mdx
@@ -5,7 +5,7 @@ openapi: "GET /v2/timeseries/{user_id}/cholesterol"
 
 <RequestExample>
 
-```bash Bash
+```bash cURL
 curl --request GET \
      --url {{BASE_URL}}/v2/timeseries/{user_id}/cholesterol?start_date="2022-05-01"&end_date="2022-06-01" \
      --header 'Accept: application/json' \
