--- a/docs/api-reference/workouts/get-raw.mdx
+++ b/docs/api-reference/workouts/get-raw.mdx
@@ -5,7 +5,7 @@ openapi: "GET /v2/summary/workouts/{user_id}/raw"
 
 <RequestExample>
 
-```bash Bash
+```bash cURL
 curl --request GET \
      --url {{BASE_URL}}/v2/summary/workouts/{user_id}/raw \
      --header 'Accept: application/json' \
