--- a/docs/api-reference/workouts/get-stream.mdx
+++ b/docs/api-reference/workouts/get-stream.mdx
@@ -5,7 +5,7 @@ openapi: "GET /v2/timeseries/workouts/{workout_id}/stream"
 
 <RequestExample>
 
-```bash Bash
+```bash cURL
 curl --request GET \
      --url {{BASE_URL}}/v2/summary/workouts/{workout_id}/stream \
      --header 'Accept: application/json' \
