--- a/docs/wearables/guides/my_fitness_pal.mdx
+++ b/docs/wearables/guides/my_fitness_pal.mdx
@@ -60,7 +60,7 @@ Please note when linking programatically that the **password** required in the p
 is the **locked key** you set in your [diary settings](https://www.myfitnesspal.com/account/diary-settings).
 
 <CodeGroup>
-```bash Bash
+```bash cURL
 curl --request POST \
      --url {{BASE_URL}}/v2/link/provider/password/my_fitness_pal \
      --header 'Accept: application/json' \
