--- a/docs/api-reference/body/get-raw.mdx
+++ b/docs/api-reference/body/get-raw.mdx
@@ -5,7 +5,7 @@ openapi: "GET /v2/summary/body/{user_id}/raw"
 
 <RequestExample>
 
-```bash Shell
+```bash cURL
 curl --request GET \
      --url {{BASE_URL}}/v2/summary/body/{user_id}/raw \
      --header 'Accept: application/json' \
