--- a/docs/api-reference/link/link-oauth-provider.mdx
+++ b/docs/api-reference/link/link-oauth-provider.mdx
@@ -5,7 +5,7 @@ openapi: "GET /v2/link/provider/oauth/{oauth_provider}"
 
 <RequestExample>
 
-```bash Bash
+```bash cURL
 curl --request GET \
      --url {{BASE_URL}}/v2/link/provider/oauth/{oauth_provider} \
      --header 'Accept: application/json'
