--- a/docs/api-reference/profile/get-summary.mdx
+++ b/docs/api-reference/profile/get-summary.mdx
@@ -5,7 +5,7 @@ openapi: "GET /v2/summary/profile/{user_id}"
 
 <RequestExample>
 
-```bash Bash
+```bash cURL
 curl --request GET \
      --url {{BASE_URL}}/v2/summary/profile/{user_id} \
      --header 'Accept: application/json' \
