--- a/docs/api-reference/sleep/get-stream.mdx
+++ b/docs/api-reference/sleep/get-stream.mdx
@@ -5,7 +5,7 @@ openapi: "GET /v2/timeseries/sleep/{sleep_id}/stream"
 
 <RequestExample>
 
-```bash Bash
+```bash cURL
 curl --request GET \
     --url {{BASE_URL}}/v2/summary/sleep/{sleep_id}/stream \
     --header 'Accept: application/json' \
