--- a/docs/api-reference/sleep/get-summary.mdx
+++ b/docs/api-reference/sleep/get-summary.mdx
@@ -5,7 +5,7 @@ openapi: "GET /v2/summary/sleep/{user_id}"
 
 <RequestExample>
 
-```bash Bash
+```bash cURL
 curl --request GET \
      --url {{BASE_URL}}/v2/summary/sleep/{user_id}?start_date={{START_DATE}}&end_date={{END_DATE}} \
      --header 'Accept: application/json' \
