--- a/docs/api-reference/user/patch-user.mdx
+++ b/docs/api-reference/user/patch-user.mdx
@@ -4,7 +4,7 @@ openapi: "PATCH /v2/user/{user_id}"
 
 <RequestExample>
 
-```shell Shell
+```bash cURL
 curl --request POST \
      --url {{BASE_URL}}/v2/user/ \
      --header 'Accept: application/json' \
