--- a/docs/api-reference/user/refresh-user-data.mdx
+++ b/docs/api-reference/user/refresh-user-data.mdx
@@ -5,7 +5,7 @@ openapi: "POST /v2/user/refresh/{user_id}"
 
 <RequestExample>
 
-```bash Bash
+```bash cURL
 curl --request POST \
      --url {{BASE_URL}}/v2/user/refresh/{user_id} \
      --header 'Accept: application/json' \
