--- a/docs/wearables/connecting-providers/launching_link.mdx
+++ b/docs/wearables/connecting-providers/launching_link.mdx
@@ -30,7 +30,7 @@ token = client.Link.create(user_id, "oura")
 const resp = await client.Link.create(client_user_id, "oura");
 ```
 
-```bash Shell
+```bash cURL
 curl --request POST \
      --url {{BASE_URL}}/v2/link/token \
      --header 'Accept: application/json' \
