--- a/docs/wearables/guides/freestyle.mdx
+++ b/docs/wearables/guides/freestyle.mdx
@@ -38,20 +38,22 @@ Note, Freestyle Libre is available in different regions, ensure you select the c
 
 ### Vital US Region
 
-| Freestyle Region                               |
-| ---------------------------------------------- |
-| United States (`us`) \*                        |
+| Freestyle Region                               | Sandbox Email                  | Production Emai;       |
+| ---------------------------------------------- | ------------------------------ | ---------------------- |
+| United States (`us`) \*                        | support+sandbox+us@tryvital.io | support+us@tryvital.io |
 | _(\*) Default Freestyle region if unspecified_ |
 
 ### Vital EU Region
 
-| Freestyle Region                               |
-| ---------------------------------------------- |
-| Europe (`eu`) \*                               |
-| Singapore (`sg`)                               |
-| Australia (`au`)                               |
-| Germany (`de`)                                 |
-| Netherlands (`nl`)                             |
+| Freestyle Region                               | Sandbox Email                  | Production Email            |
+| ---------------------------------------------- | ------------------------------ | --------------------------- |
+| Europe (`eu`) \*                               | support+sandbox@tryvital.io    | support@tryvital.io         |
+| Singapore (`sg`)                               | support+sg+sandbox@tryvital.io | support+sg+prod@tryvital.io |
+| Australia (`au`)                               | support+au+sandbox@tryvital.io | support+au@tryvital.io      |
+| Germany (`de`)                                 | support+de+sandbox@tryvital.io | support+de@tryvital.io      |
+| Netherlands (`nl`)                             | support+nl+sandbox@tryvital.io | support+nl@tryvital.io      |
+| Brazil (`br`)                                  | support+br+sandbox@tryvital.io | support+br@tryvital.io      |
+| Canada (`ca`)                                  | support+sandbox+ca@tryvital.io | support+ca@tryvital.io      |
 | _(\*) Default Freestyle region if unspecified_ |
 
 Vital has two practices (depending on environment) this applies to all regions:
@@ -61,7 +63,10 @@ Vital has two practices (depending on environment) this applies to all regions:
 | Sandbox     | tryVital-sandbox |
 | Production  | tryVital         |
 
-If you require a custom practice this requires an Enterprise Account please email support@tryvital.io.
+<Warning>
+  If you want to use a custom practice, you need an Enterprise Account please
+  email support@tryvital.io.
+</Warning>
 
 ## Vital Link
 
