--- a/docs/wearables/guides/freestyle.mdx
+++ b/docs/wearables/guides/freestyle.mdx
@@ -64,8 +64,8 @@ Vital has two practices (depending on environment) this applies to all regions:
 | Production  | tryVital         |
 
 <Warning>
-  If you want to use a custom practice, you need an Enterprise Account please
-  email support@tryvital.io.
+  If you want to use a custom practice, you need an Enterprise Account. Please
+  contact support@tryvital.io.
 </Warning>
 
 ## Vital Link
